<resources>
    <string name="app_name">GalwayKart</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="msg_subscribed">successfully subscribed</string>
    <string name="msg_subscribe_failed">successfully un-subscribed</string>
    <string name="higlights"><u><b>HIGHLIGHTS</b></u></string>
    <string name="rOrder"><u>Return Order</u></string>
    <string name="trackOrder"><u>Track Order</u></string>
    <string name="ewallet"><u>E-wallet</u></string>
    <string name="WishlistList"><u>WishList</u></string>
    <string name="Wishlist"><u>Add to Wishlist</u></string>
    <string name="Share"><u>Share</u></string>
    <string name="supra"><b>SUPRA WOOD</b></string>
    <string name="price"><b>$ 114</b></string>
    <string name="title_activity_login">Sign in</string>
    <string name="password_instruction_text">पासवर्ड निर्देश</string>
    <string name="password_instruction">अपने पासवर्ड मे कोई एक विशेष अक्षर जैसे (@#$%_.),\nएक अक्षर नंबर जैसे 0-9,\nकम से कम 8 अक्षर,\nएक बड़ा अक्षर जैसे A-Z ज़रूर प्रयोग करे</string>

    <!-- Strings related to login -->
    <string name="prompt_email">IR ID/Email/Mobile No.</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_net_banking">NetBankingActivity</string>
    <string name="title_activity_cash_card">CashCardActivity</string>
    <string name="title_activity_emi">EmiActivity</string>
    <string name="title_activity_card">CardActivity</string>
    <string name="title_activity_user_cards">UserCardsActivity</string>
    <string name="title_activity_payments">PaymentsActivity</string>
    <string name="pay_now">Pay</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="click_here">Click here</string>
    <string name="if_cvv_and_expiry_on_card"> &#160;if you have CVV and Expiry on your card</string>
    <string name="if_dont_cvv_and_expiry_on_card"> &#160;if you don\'t have CVV and Expiry on your card</string>
    <string name="net_banking">Net Banking</string>
    <string name="title_activity_merchant_payment">MerchantPaymentActivity</string>
    <string name="title_activity_verify_api">VerifyApiActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!--<string name="hello_blank_fragment">Hello blank fragment</string>-->

    <string name="recent_item">Recently View Item</string>
    <string name="apply_voucher_string">Apply Voucher</string>
    <string name="voucher_string">Voucher</string>


    <string name="test">Test</string>
    <string name="production">Production</string>

    <string name="paytmmid">GlazeT05920717888492</string>
    <string name="paytmkey">KWDs8qfufdfV!MQA</string>
    <string name="paytmINDUSTRYTYPEID">Retail109</string>
    <string name="paytmcallbackurl">https://securegw.paytm.in/theia/paytmCallback?ORDER_ID=</string>


    <string name="password_tnc">
        1. Password length must be 8-30 character long.\n
        2. Password must be contain atleast 1 alphabet value.\n
        3. Password must be contain atleast 1 numeric value.
    </string>


    <string name="use_live_key_in_production_environment">Please use your live merchant key in production environment</string>

    <string name="could_not_receive_data">Could not receive data</string>
    <string name="enter_pin">Enter Pincode</string>

    <string name="enter_coupon">Enter Voucher</string>
    <string name="remove_coupon">Remove Voucher</string>
    <string name="coupon_report">Voucher Report</string>
    <string name="coupon_type">Voucher Type</string>
    <string name="coupon_code">Voucher Code</string>
    <string name="freshchat_file_provider_authority">com.galwaykart.provider</string>


    <string name="otp_tnc">

        Note: "NEW T&amp;C for OTP Request":\n\n
        1. You can place a Request for "Request OTP Again" n number of times.\n
        2. The "Request OTP Again” function will be available/ (will get active) after 1 minute of placing the initial request placed on/by the system.\n
3. The "Request OTP Again" function will be available/ (will get active) after 5 minutes of placing the 1st request placed on/by the system. And any other request to be placed from here has to be with the interval of 5 minutes.\n
4. The OTP will be sent from our side n times per Day. (Note: This includes the OTP which has already been sent)\n
        -------------------------------\n\n
        नोट: "ओटीपी रिक्वेस्ट के लिए नए नियम व शर्तें ":\n\n
1.     आप 'रिसेंड ओटीपी' के लिए कई बार अनुरोध कर सकते हैं।\n
2.     आपके द्वारा/सिस्टम द्वारा पहली बार ओटीपी के लिए अनुरोध करने के 1 मिनट के बाद ‘रिसेंट ओटीपी’ की सुविधा उपलब्ध होगी (एक्टिव हो जाएगी)।\n
3.     आपके द्वारा/ सिस्टम द्वारा 'रिसेंड ओटीपी' के लिए पहली बार अनुरोध करने के बाद 'रिसेंड ओटीपी' का फंक्शन 5 मिनट के बाद उपलब्ध होगा
        (एक्टिव हो जाएगा)। अतः पुनः ‘रिसेंट ओटीपी’ का अनुरोध हर 5 मिनट के बाद ही कर पाएंगे।\n
4.     हमारी ओर से प्रति दिन कई बार ओटीपी भेजे जाएंगे। (नोटः इसमें वह ओटीपी भी गिना जाएगा जो पहले ही भेजा जा चुका है।)\n

    </string>
    <string name="address_note">नोट:- हमेशा अपना सही और पूरा पता दे | एड्रेस कॉलम मैं पूरी जानकारी भरे | अगर हो सके तो लैंडमार्क (आस पास कोई फेमस जगह ) भी भरे | आपके पिन कोड आपके एड्रेस का ही होना चाहिए | किसी और जगह का पिन कोड न भरे |</string>

    <string name="distributor_id">4</string>

    <string name="customer_id">0</string>
    <string name="employee_id">5</string>
    <string name="general_id">1</string>
    <string name="st_click_here"><u>click here</u></string>
    <string name="st_donation_text">* Gaushala donation will not be refundable</string>

    <string name="safety_net_api_key"> Your API Key </string>
    <string name="st_track_order"><u>Track Order</u></string>
    <string name="st_reg_text">अगर आप डिस्ट्रीब्यूटर है और आई. पी लेना चाहते है| तो इस ऑप्शन से आर्डर न करे\nIf you are a distributor and want PV/RBV benefit, Please do not use this option to place your Order.</string>
    <string name="st_reg_text_2">Note : कस्टमर का ऑप्शन केवल नॉन डिस्ट्रीब्यूटर यानि preferred कस्टमर के लिए है। Glaze डिस्ट्रीब्यूटर्स अपनी ID और पासवर्ड का प्रयोग कर डायरेक्ट लॉगिन कर सकते है।</string>
    <string name="st_change_zone"><u>Change</u></string>
    <string name="st_pin_save"><u>Save</u></string>

    <string-array name="environment_array">
        <item>@string/production</item>
        <item>@string/test</item>
        <!--<item>@string/production</item>-->

    </string-array>

    <string name="st_confirm_cart_title"><u><b>Different Items type already in cart!</b></u></string>
    <string name="st_confirm_cart_msg">Your cart contains items having different type. Would you like to empty your cart for adding this type of items?</string>
    <string name="st_confirm_cart_msg_hindi"> आपकी कार्ट में भिन्न प्रकार के आइटम हैं। क्या आप इस प्रकार के आइटम जोड़ने के लिए अपना कार्ट खाली करना चाहेंगे?</string>



</resources>
