<?xml version="1.0" encoding="utf-8"?>


<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <RelativeLayout
            android:id="@+id/common_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

            <include
                layout="@layout/common_header_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:id="@+id/tv_txt_view"
            android:text="Cart Item:"
            android:textColor="@color/colorPrimary"
            android:textSize="18dp"
            android:layout_below="@+id/common_header"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:id="@+id/tv_discount"
            android:text="Discount :"
            android:textColor="@color/colorPrimary"
            android:textSize="18dp"
            android:visibility="gone"
            android:layout_below="@+id/tv_txt_view" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:id="@+id/tv_total_ip"
            android:text="Total PV/RBV/SBV:"
            android:textColor="@color/colorPrimary"
            android:textSize="18dp"
            android:layout_below="@+id/tv_discount" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:id="@+id/tv_total_loyalty_value"
            android:text="Total Loyalty Value:"
            android:textColor="@color/colorPrimary"
            android:textSize="18dp"
            android:layout_below="@+id/tv_total_ip" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_alert"
            android:layout_margin="10dp"
            android:text="Your Shopping Cart is empty"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp"
            android:visibility="gone"
            android:layout_below="@+id/tv_total_loyalty_value"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_alert_continue"
            android:layout_margin="10dp"
            android:text="Continue Shopping"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="20dp"
            android:visibility="gone"
            android:layout_below="@+id/tv_alert"
            android:layout_marginTop="10dp"

            />


            <ImageView
                android:id="@+id/img_empty_cart"
                android:layout_width="200dp"
                android:layout_height="200dp"

                android:layout_below="@+id/tv_alert_continue"
                android:src="@drawable/icon_empty_cart"
                android:layout_centerHorizontal="true"
                android:visibility="gone"
                />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/rel_lay_coupon"
            android:layout_below="@+id/img_empty_cart">

            <TableLayout
                android:id="@+id/check_available"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spinnerlinear"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">


            <TableRow
                android:weightSum="2"
                android:id="@+id/tbl_row1">

            <TextView
                android:id="@+id/btn_apply_coupon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:clickable="true"
                android:background="@drawable/roundtextbtn"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/apply_voucher_string"
                android:textColor="@color/colorwhite"
                android:textSize="18dp" />
            </TableRow>
            <TableRow
                    android:weightSum="2"
                    android:id="@+id/tbl_row2"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/ed_coupon"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_coupon"
                        android:inputType="text"
                        android:padding="8dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/roundtext"
                        android:layout_weight="1"
                        android:textSize="14dp"
                        android:importantForAutofill="noExcludeDescendants"
                        android:singleLine="true" />
                    <TextView
                        android:id="@+id/btn_apply_code"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/roundtextbtn"
                        android:clickable="true"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="2dp"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/apply_voucher_string"
                        android:textColor="@color/colorwhite"
                        android:textSize="14dp" />
                </TableRow>
                <TableRow
                    android:weightSum="2"
                    android:id="@+id/tbl_row3"
                    android:visibility="gone"
                    >

                    <TextView
                        android:id="@+id/txt_coupon"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_coupon"
                        android:inputType="number"
                        android:padding="8dp"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:textSize="14dp"
                        android:singleLine="true" />
                    <TextView
                        android:id="@+id/btn_remove_coupon"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/roundtextbtn"
                        android:clickable="true"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="2dp"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/remove_coupon"
                        android:textColor="@color/colorwhite"
                        android:textSize="14dp" />
                </TableRow>


            </TableLayout>

        </RelativeLayout>



        <Button
            android:id="@+id/btCheckout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Checkout"
            android:background="@color/colorYellow"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/rel_lay_coupon"
            />

        <Button
            android:id="@+id/bt_change_cart"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="Edit Cart"
            android:background="@color/colorYellow"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:visibility="gone"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/btCheckout"
            />

        <View
            android:id="@+id/view_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/bt_change_cart"
            />


        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bar"
            android:layout_margin="10dp"
            android:gravity="center"
            android:visibility="gone"
            android:layout_below="@+id/view_1"

            />



    <!--<ListView-->
        <!--android:id="@+id/list_cart_item"-->
        <!--android:layout_below="@+id/progress_bar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->

        <!--android:paddingBottom="50dp">-->
    <!--</ListView>-->


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_cart_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progress_bar"
            android:layout_margin="10dp"
            android:layoutAnimation="@anim/layout_animation_right_to_left"
            >

        </androidx.recyclerview.widget.RecyclerView>

        <View
            android:id="@+id/view_layout"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/list_cart_item"
            android:background="@color/colorPrimaryDark"

            />
        <TextView
            android:id="@+id/tv_recent_view_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Recent View Item:"

            android:gravity="left"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimary"
            android:textSize="18dp"
            android:layout_below="@+id/view_layout"
            />

        <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_RecentItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:layoutAnimation="@anim/layout_animation_right_to_left"
        android:layout_below="@+id/tv_recent_view_item"
        android:layout_margin="5dp">

    </androidx.recyclerview.widget.RecyclerView>


    <RelativeLayout
        android:id="@+id/common_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        >


        <Button
            android:id="@+id/bt_total_amount"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="264654"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorwhite"
            android:textSize="18dp"
            android:visibility="gone"
            />



</RelativeLayout>
    </RelativeLayout>
    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:visibility="gone"
        app:headerLayout="@layout/nav_header_home_page"
        app:menu="@menu/activity_home_page_drawer" >

    <ExpandableListView
        android:id="@+id/expandableListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/nav_header_height"
        android:background="@android:color/white"
        android:dividerHeight="1dp"
        android:layoutDirection="rtl"
        android:groupIndicator="@drawable/store_info_expandabellist_indicator"
        />
    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>
